--- a/entry/src/main/res/values-de/strings.xml
+++ b/entry/src/main/res/values-de/strings.xml
@@ -300,6 +300,7 @@
     <string name="latitude">Breitengrad:</string>
     <string name="location">Ort:</string>
     <string name="longitude">Längengrad:</string>
+    <string name="altitude">Altitude:</string>
     <string name="geo_send">Sende GPS-Standort</string>
     <string name="geo_street_views_map">StreetViews &amp; Karte</string>
     <string name="geo_share">Geo-Standorte teilen</string>
@@ -389,6 +390,7 @@
     <string name="file_attachment">Anlagen senden</string>
     <string name="file_size_too_big">Die maximale Dateigrösse wurde überschritten: %1$s</string>
     <string name="file_transfer_active">Der laufende Dateitransfer wurde unterbrochen @ %1$s.</string>
+    <string name="file_transfer_not_secure">XEP-0096: Das SI File Transfer-Protokoll unterstützt den verschlüsselten Dateiversand nicht!</string>
     <string name="file_transfer_not_supported">Contact Client oder Server unterstützt keine Dateiübertragung oder erforderliche Protokolle</string>
 
 	<string name="finish">Beenden</string>
