--- a/entry/src/main/res/values-ru/strings.xml
+++ b/entry/src/main/res/values-ru/strings.xml
@@ -974,7 +974,7 @@
 
     <!-- Provisioning Plugin-->
     <string name="provisioning_auto">Автоматическое обнаружение URI инициализации</string>
-    <string name="provisioning_bonjour">Bonjour</string>
+    <string name="provisioning_bonjour">Локальный Bonjour</string>
     <string name="provisioning_clipboard_failed">Не удалось скопировать UUID в буфер обмена</string>
     <string name="provisioning_copy_to_clipboard">Скопировать UUID в буфер обмена</string>
     <string name="provisioning_credentials">Последние сохраненные учетные данные для обеспечения</string>
@@ -1109,7 +1109,7 @@
     <string name="jbr_jingle_auto">Автоматическое обнаружение реле узлов Jingle</string>
     <string name="jbr_jingle_list">Дополнительные узлы звонка…</string>
     <string name="jbr_jingle_list_summary">Пользовательские дополнительные узлы Jingle для использования</string>
-    <string name="jbr_jingle_nodes">Jingle Nodes</string>
+    <string name="jbr_jingle_nodes">Узлы Jingle</string>
     <string name="jbr_jingle_use">Использовать jingle-узлы</string>
     <string name="jbr_keep_alive">Сохранить вживую</string>
     <string name="jbr_keep_alive_enable">Включить опцию Keep Alive</string>
@@ -1304,9 +1304,10 @@
 
     <!-- Camera used -->
     <string name="settings_camera">Камера</string>
-    <string name="settings_no_camera">Не найдено ни одного устройства камеры</string>
+    <string name="settings_no_camera">Совместимое устройство камеры не найдено</string>
     <string name="settings_use_back_camera">Использовать обратную камеру</string>
     <string name="settings_use_front_camera">Использовать переднюю камеру</string>
+    <string name="settings_use_match_camera_resolution">Использовать максимально подходящее разрешение камеры: %1$s</string>
 
     <!-- Video codecs -->
     <string name="settings_direct_surface_decode">Использовать прямое поверхностное декодирование</string>
@@ -1453,7 +1454,7 @@
     <string name="location_permission_denied_feedback">Функции GPS-Location не будут доступны, пока вы не предоставите запрос на разрешение</string>
 
     <string name="notifications_permission_denied_dialog_title">Запрос разрешения на уведомления</string>
-    <string name="notifications_permission_denied_feedback">Уведомления от aTalk будут отключены, пока вы не предоставите разрешение.</string>
+    <string name="notifications_permission_denied_feedback">Уведомления от aTalk будут отключены пока вы не предоставите разрешение</string>
 
     <string name="phone_permission_denied_dialog_title">Прочитать запрос разрешения состояния телефона</string>
     <string name="phone_permission_denied_feedback">Функции телефона не будут доступны, пока вы не предоставите запрос на разрешение</string>
