--- a/entry/src/main/res/values/strings.xml
+++ b/entry/src/main/res/values/strings.xml
@@ -706,7 +706,6 @@
     <string name="callinfo_view_certificate">View certificate</string>
     <string name="callinfo_video_size">Video size</string>
     <string name="callinfo_video_info">Video info</string>
-
     <string name="callinfo_adaptive_jitter_buffer">Adaptive jitter buffer:</string>
     <string name="callinfo_decoded_with_fec">Packets decoded with FEC:</string>
     <string name="callinfo_discarded_percent">Packets currently being discarded:</string>
@@ -972,7 +971,6 @@
     <string name="settings_bosh_proxy_summary">Setup connection via BOSH/Proxy for the account</string>
     <string name="bosh_proxy_url_null">BOSH URL field content cannot be empty</string>
     <string name="bosh_proxy_host_port_null">Proxy Host and Port fields content cannot be empty</string>
-
     <string name="bosh_proxy_type">Type:</string>
     <string name="bosh_proxy_url">BOSH URL:</string>
     <string name="bosh_proxy_use_http">Use HTTP Proxy</string>
@@ -1270,7 +1268,6 @@
     <string name="tts_enable">Enable Text &#x27A1; Speech</string>
     <string name="tts_synthesis">Enter text to speak or synthesized and save to file:</string>
     <string name="tts_voice">Default TTS voice:</string>
-
     <string name="loading_wait">Loading, please wait…</string>
 
     <!-- Remove special characters from phone number -->
@@ -1312,9 +1309,10 @@
 
     <!-- Camera used -->
     <string name="settings_camera">Camera</string>
-    <string name="settings_no_camera">No camera device found</string>
+    <string name="settings_no_camera">No compatible camera device found</string>
     <string name="settings_use_back_camera">Use back camera</string>
     <string name="settings_use_front_camera">Use front camera</string>
+    <string name="settings_use_match_camera_resolution">Use closest match camera resolution: %1$s</string>
 
     <!-- Video codecs -->
     <string name="settings_direct_surface_decode">Use direct surface decoding</string>
@@ -1385,10 +1383,8 @@
     <string name="crypto_msg_omemo_session_unverified">Sending OMEMO messages to some unknown buddies with unverified fingerprints!</string>
     <string name="crypto_msg_omemo_session_unverified_untrusted">MultiUserChat with some buddies untrusted or with unverified fingerprints!</string>
     <string name="crypto_msg_omemo_session_verified">*** All buddies have been authenticated! ***</string>
-
     <string name="crypto_fingerprint_status">Verified: %1$s</string>
     <string name="crypto_no_key_present">No key present</string>
-
     <string name="crypto_fingerprint_copy">Fingerprint copied to clipboard!</string>
     <string name="crypto_omemo_distrust_messaging_stop">Stop further sending OMEMO message to buddy: %1$s</string>
     <string name="crypto_omemo_trust_messaging_resume">Resume sending OMEMO message to buddy: %1$s</string>
@@ -1442,7 +1438,6 @@
     <string name="permission_video">Photo &amp; Video</string>
     <string name="permission_storage">Storage</string>
     <string name="permission_hint">For application maximum performance and full features support, aTalk requires you to grant permissions for the following services. Without them, aTalk may not work or may have unexpected behavior!</string>
-
     <string name="permission_denied">DENIED</string>
     <string name="permission_granted">GRANTED</string>
     <string name="permission_denied_permanently">PERMANENTLY DENIED</string>
