--- a/entry/ReleaseNotes.txt
+++ b/entry/ReleaseNotes.txt
@@ -1,5 +1,21 @@
 Project aTalk-ohos Release Notes
 =========================================================================
+Version:        00.09.010 (0009010)
+Release Date:   10/02/2025
+Author:         cmeng
+- Executors.newSingleThreadExecutor() in AccountInfoPresenceActivity$DetailsLoadWorker must implement shutdown and awaitTermination, else ANR in FFR:
+  at java.util.concurrent.ThreadPoolExecutor.awaitTermination (ThreadPoolExecutor.java:1471)
+  at java.util.concurrent.Executors$DelegatedExecutorService.awaitTermination (Executors.java:700)
+  at org.atalk.android.gui.account.AccountInfoPresenceActivity$DetailsLoadWorker$$ExternalSyntheticThrowIAE2.m (D8$$SyntheticClass)
+
+  a. at org.atalk.android.gui.chat.chatsession.ChatSessionFragment$InitChatRoomWrapper.execute (ChatSessionFragment.java:528)
+  b. at org.atalk.android.gui.chat.ChatFragment$LoadHistoryTask.execute (ChatFragment.java:2329)
+  c. at org.atalk.android.gui.chat.ChatFragment$SendFile.execute (ChatFragment.java:2641)
+  d. at org.atalk.android.gui.chatroomslist.ChatRoomCreateDialog$InitComboBox.execute (ChatRoomCreateDialog.java:190)
+  e. at org.atalk.android.gui.chatroomslist.ChatRoomBookmarksDialog$InitBookmarkedConference.execute (ChatRoomBookmarksDialog.java:224)
+- Avoid using smack StringUtils.isEmpty as it does not check for null content.
+
+=========================================================================
 Version:        00.09.000 (0009000)
 Release Date:   09/04/2025
 Author:         cmeng
@@ -7,6 +23,7 @@ Author:         cmeng
   * libvpx 1.15.2 <= 1.13.1
   * opus 1.5.2 <= 1.3.2
   * openssl 3.5.2 <= 1.1.1t
+  * x264 165 <= 164
 - Fix cast exception introduced in 4.0.0 when apply fix for duplicate sending of the initial <presence/> stanza by smack ServiceDiscoveryManager.
   Cause Bosh connection to crash. Need to cast to common base class in isSendPresence = ((AbstractXMPPConnection) connection).getConfiguration().isSendPresence()
 - Fix endless loop in discoverInfoNonBlocking at times, caused by BareJid discInfo access; Block all BareJid discoInfo access.
@@ -21,14 +38,10 @@ Author:         cmeng
 *** Observation with no solution implemented: ***
 - Upon debug install, sometimes smack does not receive incoming messages (no logcat), until aTalk is open.
   ChatState receive is normal.
+- SSL Certificate is not available when using XMPP-Bosh Connection
 - libvpx build process
 1. Building of libvpx using build.make.Android_ndk.mk does not work
-a. build.make.Android.mk info errors:
-# comments in Android.mk is outdated i.e. sdk-path is invalid
-# set APP_ABI e.g. "arm64-v8a" to match the --target passed to configure ??? TARGET use internal defined variables i.e. "arm64-android-gcc".
-
-2. BUILD_PFX must be specified and exported during configure
-3. make: *** No rule to make target 'vp8_rtcd.h', needed by 'vpx/vpx_config.c' etc...
+a comments in Android.mk is outdated i.e. sdk-path is invalid
 
 =========================================================================
 Version:         00.08.000 (0008000)
@@ -62,7 +75,7 @@ Author:         cmeng
   * https://developer.android.com/guide/practices/page-sizes#ndk-build
   * use ndkVersion = '28.1.13356709' <= '22.1.7171670'
   * add LOCAL_LDFLAGS += "-Wl,-z,max-page-size=16384" in all Android.mk files
-  * add APP_SUPPORT_FLEXIBLE_PAGE_SIZES := true Application.k
+  * add APP_SUPPORT_FLEXIBLE_PAGE_SIZES := true
 - Add support to properly handle EdgeToEdge overlay content in aTalkApp; not compatible with aTalk.
 - Received muc message incorrectly classified as outgoing message; introduced in 4.3.0 release.
 - Fix auto normal/omemo switching on received omemo message; errors introduced during MenuProvider migration.
